The jk.toml renderer writes features, profiles, [javac], extra source roots, sources and optional deps, so an import round-trips them
[build] extra-src and [test] extra-src, [javac] args and plugins, one [profiles.<name>] per
profile, [features] default plus one [features.<name>] per feature, sources = true / "always",
and optional = true on a dependency entry (table form for an optional workspace edge). A table
whose every value is its default is not written. JkBuild.Build gains withTestExtraSrc, the
test-scoped twin of withExtraSrc.